desktop and mobile

--- a/index.html
+++ b/index.html
@@ -37,83 +37,115 @@
 
   <div class="container">
 
-  <div class="work">
-    <div class="backgound">
+  <div class="cont">
+
+    <div class="work">
+      <img class="icon" src="images/icon-work.svg" alt="icon-self-care">
+    </div>
+
+    <div class="background">
       <div class="flex">
-        <p>work</p>
-        <img src="" alt="">
+        <h2>work</h2>
+        <img src="images/icon-ellipsis.svg" alt="icon-ellipsis">
       </div>
-      <div class="flex">
+      <div class="flex_">
         <p>32hrs</p>
-        <p>LastWeek</p>
+        <p>Last Week</p>
       </div>
     </div>
   </div>
 
-  <div class="Play">
-    <div class="backgound">
+  <div class="cont">
+
+    <div class="play">
+      <img class="icon" src="images/icon-play.svg" alt="icon-self-care">
+    </div>
+
+    <div class="background">
       <div class="flex">
-        <p>Play</p>
-        <img src="" alt="">
+        <h2>Play</h2>
+        <img src="images/icon-ellipsis.svg" alt="">
       </div>
-      <div class="flex">
+      <div class="flex_">
         <p>32hrs</p>
-        <p>LastWeek</p>
+        <p>Last Week</p>
       </div>
     </div>
   </div>
 
-  <div class="Study">
-    <div class="backgound">
+  <div class="cont">
+
+    <div class="study">
+      <img class="icon" src="images/icon-study.svg" alt="icon-self-care">
+    </div>
+    
+    <div class="background">
       <div class="flex">
-        <p>Study</p>
-        <img src="" alt="">
+        <h2>Study</h2>
+        <img src="images/icon-ellipsis.svg" alt="">
       </div>
-      <div class="flex">
+      <div class="flex_">
         <p>32hrs</p>
-        <p>LastWeek</p>
+        <p>Last Week</p>
       </div>
     </div>
   </div>
 
-  <div class="Exercise">
-    <div class="backgound">
+  <div class="cont">
+
+    <div class="exercise">
+      <img class="icon" src="images/icon-exercise.svg" alt="icon-self-care">
+    </div>
+
+    <div class="background">
       <div class="flex">
-        <p>Exercise</p>
-        <img src="" alt="">
+        <h2>Exercise</h2>
+        <img src="images/icon-ellipsis.svg" alt="">
       </div>
-      <div class="flex">
+      <div class="flex_">
         <p>32hrs</p>
-        <p>LastWeek</p>
+        <p>Last Week</p>
       </div>
     </div>
   </div>
 
-  <div class="Social">
-    <div class="backgound">
+  <div class="cont">
+
+    <div class="social">
+      <img class="icon" src="images/icon-social.svg" alt="icon-self-care">
+    </div>
+
+    <div class="background">
       <div class="flex">
-        <p>Social</p>
-        <img src="" alt="">
+        <h2>Social</h2>
+        <img src="images/icon-ellipsis.svg" alt="">
       </div>
-      <div class="flex">
+      <div class="flex_">
         <p>32hrs</p>
-        <p>LastWeek</p>
+        <p>Last Week</p>
       </div>
     </div>
   </div>
 
-  <div class="Self Care">
-    <div class="backgound">
+  <div class="cont">
+
+    <div class="self_care">
+      <img class="icon" src="images/icon-self-care.svg" alt="icon-self-care">
+    </div>
+
+    <div class="background">
       <div class="flex">
-        <p>Self Care</p>
-        <img src="" alt="">
+        <h2>Self Care</h2>
+        <img src="images/icon-ellipsis.svg" alt="">
       </div>
-      <div class="flex">
+      <div class="flex_">
         <p>32hrs</p>
-        <p>LastWeek</p>
+        <p>Last Week</p>
       </div>
     </div>
+
   </div>
+
 </div>
 </div>
 
